syntax = "proto3";

package resource;
option go_package = "resource";

import "block.proto";

message Resource {
  string id = 1;
  string name = 2;
  oneof type {
    GRPCService grpc_service = 3;
    RESTService rest_service = 4;
    Docstore docstore = 5;
    Blobstore blobstore = 6;
    LanguageService language_service = 7;
  }
  repeated block.Block blocks = 8;
}

enum Runtime {
  NODE = 0;
  GO = 1;
  PYTHON = 2;
}

message LanguageService {
  string host = 1;
  Runtime runtime = 2;
  bool close_on_cleanup = 3;
}

message GRPCService {
  string host = 1;
}

message RESTService {
  string base_url = 1;
}

message Docstore {
  string url = 1;
}

message Blobstore {
  string url = 1;
}

